<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AlertDialog">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/dialog_timer_edit_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/dialog_edit_header_hint"
        tools:text="" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dialog_timer_edit_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        tools:text="00:00:00.00" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/dialog_timer_edit_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/dialog_edit_footer_hint"
        tools:text="Footer Text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/dialog_timer_edit_reset"
            android:layout_width="@dimen/icon_medium_pressable"
            android:layout_height="@dimen/icon_medium_pressable"
            android:layout_gravity="center"
            android:contentDescription="@string/button_start"
            android:padding="@dimen/icon_medium_pressable_padding"
            android:src="@drawable/ic_clear_black_24dp" />

        <ImageButton
            android:id="@+id/dialog_timer_edit_start_stop"
            android:layout_width="@dimen/icon_medium_pressable"
            android:layout_height="@dimen/icon_medium_pressable"
            android:layout_gravity="center"
            android:contentDescription="@string/button_start"
            android:padding="@dimen/icon_medium_pressable_padding"
            android:src="@drawable/ic_play_arrow_black_24dp" />


    </LinearLayout>


</LinearLayout>